Expose list activation fields in API
